--- a/Contact.html
+++ b/Contact.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html style="font-size: 16px">
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap"
+      rel="stylesheet"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
     <meta name="keywords" content="Contact Us" />
@@ -192,118 +198,396 @@
         </nav>
       </div>
     </header> -->
-    <section
-      class="u-align-center u-clearfix u-grey-5 u-section-1"
-      id="sec-6701"
-    >
-      <a href="/"
-        ><img src="images/logo side badge.png" alt="" style="width: 28%"
-      /></a>
-      <div class="u-clearfix u-valign-middle u-sheet-1 contact-align">
-        <div class="u-form u-form-1 u-1-box">
-          <div class="header-center">
-            <h1 class="u-text u-text-default u-text-1">Drop us a line!</h1>
+    <style>
+      .hero {
+        position: absolute;
+        width: 90%;
+        height: 95vh;
+        left: 50%;
+        transform: translateX(-50%);
+      }
+      .button-split {
+        display: flex;
+        background-color: transparent;
+        flex-direction: column;
+      }
+
+      footer {
+        width: 100%;
+      }
+      .contact-align {
+        align-items: flex-end;
+      }
+      .top-section .address-box {
+        color: rgba(255, 0, 0, 0.801);
+        font-size: 20px;
+        align-self: center;
+        margin-right: 15%;
+        margin-top: 6%;
+      }
+      .button-split {
+        display: flex;
+        flex-direction: column-reverse;
+        background-color: transparent;
+      }
+      .u-btn {
+        margin: 0;
+      }
+      .hero-wraper {
+        position: relative;
+      }
+      .u-section-1 {
+        margin-bottom: 100px;
+        height: 40vh;
+      }
+      .u-section-1 .u-text-1 {
+        font-weight: lighter;
+        margin: 0;
+        font-size: 30px;
+        color: #8e64c9;
+      }
+      .u-button-style.u-border-black {
+        color: #9063cd !important;
+      }
+      .u-button-style.u-border-black:hover,
+      .u-button-style.u-border-black:focus {
+        border-color: #9063cd !important;
+        color: #000000 !important;
+        background-color: #f6be00 !important;
+      }
+
+      .u-hover-black:hover,
+      .u-hover-black[class*='u-border-']:hover,
+      .u-hover-black:focus,
+      .u-hover-black[class*='u-border-']:focus,
+      .u-active-black.u-active.u-active,
+      .u-active-black[class*='u-border-'].u-active.u-active,
+      a.u-button-style.u-hover-black:hover,
+      a.u-button-style.u-hover-black[class*='u-border-']:hover,
+      a.u-button-style:hover > .u-hover-black,
+      a.u-button-style:hover > .u-hover-black[class*='u-border-'],
+      a.u-button-style.u-hover-black:focus,
+      a.u-button-style.u-hover-black[class*='u-border-']:focus,
+      a.u-button-style.u-button-style.u-active-black:active,
+      a.u-button-style.u-button-style.u-active-black[class*='u-border-']:active,
+      a.u-button-style.u-button-style.u-active-black.active,
+      a.u-button-style.u-button-style.u-active-black[class*='u-border-'].active,
+      a.u-button-style.u-button-style.active > .u-active-black,
+      a.u-button-style.u-button-style.active
+        > .u-active-black[class*='u-border-'],
+      li.active > a.u-button-style.u-button-style.u-active-black,
+      li.active
+        > a.u-button-style.u-button-style.u-active-black[class*='u-border-'] {
+        color: #ffffff !important;
+        background-color: #f6be00 !important;
+      }
+      .u-section-1 .u-form-1 {
+        width: 50%;
+        flex-basis: 45%;
+      }
+      .extra-flex {
+        flex-basis: 25%;
+        align-self: center;
+      }
+      .header-center {
+        text-align: -webkit-center;
+      }
+      .u-form-vertical.u-form-spacing-20 .u-form-group {
+        margin-bottom: 0;
+        padding-left: 0;
+      }
+      .u-btn-rectangle {
+        border-radius: 20px !important;
+      }
+
+      .u-input,
+      .u-input2,
+      .u-input3 {
+        border: 0;
+        color: #8e64c9;
+        font-size: 20px;
+        padding: 2px;
+      }
+      .stamp {
+        transform: rotate(12deg);
+        color: #555;
+        font-size: 3rem;
+        font-weight: 700;
+        border: 0.25rem solid #555;
+        display: inline-block;
+        padding: 0.25rem 1rem;
+        text-transform: uppercase;
+        border-radius: 1rem;
+        font-family: 'Black Ops One', cursive;
+        -webkit-mask-image: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/8399/grunge.png');
+        -webkit-mask-size: 944px 604px;
+        mix-blend-mode: multiply;
+        border-radius: 50px;
+      }
+      .stamp-wrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        align-self: center;
+        margin-bottom: 100px;
+      }
+      .call-us {
+        color: #fe5610;
+        transform: rotate(-14deg);
+        font-size: 36px;
+        margin-left: 50px;
+        padding-bottom: 5px;
+      }
+      .is-approved {
+        color: #fe5610;
+        border: 0.5rem solid #fe5610;
+        -webkit-mask-position: 13rem 6rem;
+        transform: rotate(-14deg);
+        border-radius: 30px;
+        max-height: 100px;
+      }
+      .top-section {
+        display: flex;
+        justify-content: space-between;
+        height: 50vh;
+      }
+      .u-form-vertical.u-form-spacing-20 .u-form-group {
+        margin-bottom: 0;
+        padding-left: 0;
+        display: flex;
+        justify-content: space-around;
+      }
+      .sections-wrapper {
+        display: flex;
+        flex-direction: column;
+      }
+      .u-section-1 .u-sheet-1 {
+        min-height: 0%;
+      }
+      .sign-up {
+        padding: 10px 25%;
+      }
+      @media (max-height: 850px) {
+        .u-section-1{
+          height: 45vh;
+        }
+      }
+      @media (max-height: 700px) {
+        .u-section-1{
+          height: 50vh;
+        }
+      }
+      @media (max-width: 1200px) {
+        .is-approved {
+          border-radius: 20px;
+        }
+        .stamp {
+          font-size: 2rem;
+        }
+        .call-us {
+          font-size: 1.5rem;
+        }
+        .stamp-wrapper {
+          margin-left: 20px;
+        }
+        .hero {
+          position: absolute;
+          width: 100%;
+        }
+        .top-section .address-box {
+          margin-right: 6%;
+        }
+        .sign-up {
+          padding: 10px 6%;
+        }
+      }
+      @media (max-width: 1000px) {
+        .stamp {
+          font-size: 1.5rem;
+        }
+
+        .is-approved {
+          border-radius: 15px;
+        }
+        .call-us {
+          font-size: 1rem;
+        }
+        .stamp-wrapper {
+          margin-left: 20px;
+        }
+        .hero {
+          height: 90vh;
+          top: 15px;
+        }
+        .top-section .address-box {
+          margin-right: 6%;
+        }
+        .sign-up {
+          padding: 10px 6%;
+        }
+      }
+      @media (max-width: 800px) {
+          .hero {
+            height: 75vh;
+            top: 90px;
+          }
+          .top-section .address-box {
+            margin-right: 6%;
+            font-size: 1rem;
+            margin-top: 23%;
+          }
+        }
+        @media (max-width: 750px) {
+          .hero {
+            height: 40vh;
+            top: 130px;
+          }
+          .top-section {
+            height: 30vh;
+          }
+          .stamp-wrapper {
+            margin-bottom: 0px;
+          }
+          .u-section-1 .u-form-1 {
+            width: 100%;
+            padding-inline: 40px;
+          }
+          .u-section-1 {
+            height: 50vh;
+          }
+          .stamp {
+            font-size: 1rem;
+          }
+         .stamp-wrapper .call-us {
+            color: #fe5610 !important;
+            font-size: 0.8rem;
+            margin-left: 30px;
+          }
+          .top-section .address-box {
+            margin-right: 5%;
+            font-size: 0.8rem;
+          }
+        }
+    </style>
+    <div class="hero-wraper">
+      <img
+        src="images/base_logo_transparent_background.png"
+        alt=""
+        class="hero"
+      />
+    </div>
+    <div class="sections-wrapper">
+      <div class="top-section">
+        <div class="stamp-wrapper">
+          <span class="stamp is-approved">Call Us today</span>
+          <span class="call-us">(512) 607-5973</span>
+        </div>
+        <p class="address-box">
+          <br />
+          Send Mail to:
+          <br />
+          5900 Balcones Drive
+          <br />
+          Suite 6211
+          <br />
+          Austin, TX 78731
+        </p>
+      </div>
+      <section
+        class="u-align-center u-clearfix u-grey-5 u-section-1 button-split"
+        id="sec-6701"
+      >
+        <div class="u-clearfix u-valign-middle u-sheet-1 contact-align">
+          <div class="extra-flex">
+            <a
+              href="Sign up.html"
+              class="u-border-1 u-border-black u-btn u-button-style u-hover-black u-none u-text-hover-white u-btn-1 u-btn-rectangle u-border-2 sign-up"
+              >Sign Up Now!</a
+            >
           </div>
-          <form
-            action="https://formsubmit.co/shiningbrighttutors@gmail.com"
-            method="POST"
-            class="u-clearfix u-form-spacing-20 u-form-vertical u-inner-form"
-            style="padding: 10px"
-          >
-            <div class="u-form-group u-form-name u-label-none">
-              <label for="name-3b9a" class="u-label">Name</label>
+          <div class="u-form u-form-1 u-1-box">
+            <div class="header-center">
+              <h1 class="u-text u-text-default u-text-1">Drop us a line!</h1>
+            </div>
+            <form
+              action="https://formsubmit.co/shiningbrighttutors@gmail.com"
+              method="POST"
+              class="u-clearfix u-form-spacing-20 u-form-vertical u-inner-form"
+              style="padding: 10px"
+            >
+              <div class="u-form-group u-form-name u-label-none">
+                <label for="name-3b9a" class="u-label">Name</label>
+                <input
+                  type="text"
+                  placeholder="Name"
+                  id="name-3b9a"
+                  name="name"
+                  class="u-border-2 u-border-black u-border-no-left u-border-no-right u-border-no-top u-input u-input-rectangle u-input-1"
+                  required=""
+                />
+              </div>
+              <div class="u-form-email u-form-group u-label-none">
+                <label for="email-3b9a" class="u-label">Email</label>
+                <input
+                  type="email"
+                  placeholder="Email*"
+                  id="email-3b9a"
+                  name="email"
+                  class="u-border-2 u-border-black u-border-no-left u-border-no-right u-border-no-top u-input u-input-rectangle u-input-2"
+                  required=""
+                />
+              </div>
+              <div class="u-form-group u-form-message u-label-none">
+                <label for="message-3b9a" class="u-label">Message</label>
+                <textarea
+                  placeholder="Message"
+                  rows="1"
+                  cols="2"
+                  id="message-3b9a"
+                  name="message"
+                  class="u-border-2 u-border-black u-border-no-left u-border-no-right u-border-no-top u-input u-input-rectangle u-input-3"
+                  required=""
+                ></textarea>
+              </div>
+              <div class="u-align-center u-form-group u-form-submit">
+                <a
+                  href="/"
+                  class="u-border-2 u-border-black u-btn u-btn-rectangle u-btn-submit u-button-style u-none u-btn-1"
+                  >Home</a
+                >
+                <button
+                  class="u-border-2 u-border-black u-btn u-btn-rectangle u-btn-submit u-button-style u-none u-btn-1"
+                  type="submit"
+                >
+                  Send
+                </button>
+                <input
+                  type="submit"
+                  value="submit"
+                  class="u-form-control-hidden"
+                />
+              </div>
+              <div class="u-form-send-message u-form-send-success">
+                Thank you! Your message has been sent.
+              </div>
+              <div class="u-form-send-error u-form-send-message">
+                Unable to send your message. Please fix errors then try again.
+              </div>
               <input
-                type="text"
-                placeholder="Enter your Name"
-                id="name-3b9a"
-                name="name"
-                class="u-border-2 u-border-black u-border-no-left u-border-no-right u-border-no-top u-input u-input-rectangle u-input-1"
-                required=""
+                type="hidden"
+                value="https://formsubmit.co/shiningbrighttutors@gmail.com"
+                name="recaptchaResponse"
               />
-            </div>
-            <div class="u-form-email u-form-group u-label-none">
-              <label for="email-3b9a" class="u-label">Email</label>
               <input
-                type="email"
-                placeholder="Enter a valid email address"
-                id="email-3b9a"
-                name="email"
-                class="u-border-2 u-border-black u-border-no-left u-border-no-right u-border-no-top u-input u-input-rectangle u-input-2"
-                required=""
+                type="hidden"
+                name="_next"
+                value="https://www.shiningbrighttutors.com/thanks.html"
               />
-            </div>
-            <div class="u-form-group u-form-message u-label-none">
-              <label for="message-3b9a" class="u-label">Message</label>
-              <textarea
-                placeholder="Enter your message"
-                rows="2"
-                cols="25"
-                id="message-3b9a"
-                name="message"
-                class="u-border-2 u-border-black u-border-no-left u-border-no-right u-border-no-top u-input u-input-rectangle u-input-3"
-                required=""
-              ></textarea>
-            </div>
-            <div class="u-align-center u-form-group u-form-submit">
-              <a
-                href="/"
-                class="u-border-2 u-border-black u-btn u-btn-rectangle u-btn-submit u-button-style u-none u-btn-1"
-                >Home</a
-              >
-              <button
-                class="u-border-2 u-border-black u-btn u-btn-rectangle u-btn-submit u-button-style u-none u-btn-1"
-                type="submit"
-              >
-                Send
-              </button>
-              <input
-                type="submit"
-                value="submit"
-                class="u-form-control-hidden"
-              />
-            </div>
-            <div class="u-form-send-message u-form-send-success">
-              Thank you! Your message has been sent.
-            </div>
-            <div class="u-form-send-error u-form-send-message">
-              Unable to send your message. Please fix errors then try again.
-            </div>
-            <input
-              type="hidden"
-              value="https://formsubmit.co/shiningbrighttutors@gmail.com"
-              name="recaptchaResponse"
-            />
-            <input
-              type="hidden"
-              name="_next"
-              value="https://www.shiningbrighttutors.com/thanks.html"
-            />
-          </form>
+            </form>
+          </div>
         </div>
-        <div class="just-margin">
-          <p class="address-box">
-            <span class="Shining-bright">Shining Bright Tutors</span>
-            <br />
-            Send Mail to: 5900
-            <br />
-            Balcones Drive Suite 6211
-            <br />
-            Austin, TX 78731
-            <br />
-            <br />
-            <span class="call-us">Call Us at (512) 607-5973</span>
-          </p>
-        </div>
-      </div>
-      <div class="u-btn-req-center">
-        <a
-          href="https://forms.gle/eFFdhjrrdggAGPEu6"
-          class="u-border-1 u-border-black u-btn u-button-style u-hover-black u-none u-text-hover-white u-btn-1 u-btn-rectangle u-border-2"
-          target="_blank"
-          >request call</a
-        >
-      </div>
-    </section>
+      </section>
+    </div>
 
     <footer
       class="u-align-center u-clearfix u-footer u-grey-80 u-footer"
