--- a/Rates2.0.html
+++ b/Rates2.0.html
@@ -6,21 +6,20 @@
     <meta name="keywords" content="​​Rates" />
     <meta name="description" content="" />
     <meta name="page_type" content="np-template-header-footer-from-plugin" />
-    <title>Portal</title>
+    <title>Sign in</title>
     <link rel="stylesheet" href="nicepage.css" media="screen" />
     <link rel="stylesheet" href="Rates.css" media="screen" />
     <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon" />
     <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+  />
     <script
       class="u-script"
       type="text/javascript"
       src="jquery.js"
       defer=""
     ></script>
-
     <script
       class="u-script"
       type="text/javascript"
@@ -47,7 +46,6 @@
         "logo": "images/logosmall.png"
       }
     </script>
-
     <meta name="theme-color" content="#478ac9" />
     <meta property="og:title" content="Rates" />
     <meta property="og:type" content="website" />
@@ -158,7 +156,9 @@
                   class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"
                 >
                   <li class="u-nav-item">
-                    <a class="u-button-style u-nav-link" href="/">Home</a>
+                    <a class="u-button-style u-nav-link" href="/"
+                      >Home</a
+                    >
                   </li>
                   <li class="u-nav-item">
                     <a class="u-button-style u-nav-link" href="About.html"
@@ -192,132 +192,84 @@
           </div>
         </nav>
       </div>
-      <style>
-        .hero-wraper {
-          display: flex;
-          margin: 0 40px;
-          align-items: center;
-          height: 40px;
-        }
-        header .hero-p {
-          margin-top: -3%;
-          font-size: 90%;
-        }
-        .hero-p {
-          text-align: center;
-          font-family: sans-serif;
-        }
-        .hero-img {
-          min-width: 250px;
-          min-height: 150px;
-          max-width: 20%;
-          display: grid;
-          place-items: center;
-          margin: auto;
-        }
-        
-      </style>
-      <div class="hero-wraper">
-        <img
-          src="images/favicon.png"
-          alt=""
-          style="
-            width: 50px;
-            height: 50px;
-            border-radius: 50%;
-            background-color: #e295c4;
-            padding: 3px;
-          "
-        />
-        <h1
-          class="faq-hero"
-          style="
-            padding-left: 10px;
-            font-size: 32px;
-            font-weight: 500;
-            color: #fe4f02;
-            line-height: 16px;
-          "
-        >
-          Portal <br>
-        <span style="font-size: 16px;">Powered by TutorBird</span>
-        </h1>
-      </div>
-      <img
-        class="hero-img"
-        src="images/customcolor_logo_transparent_background.png"
-        alt=""
-      />
-      <p class="hero-p">
-        To access your profile, view your history, and join <br> your tutoring session, please sign in to your <br> account.
-      </p>
-
-    <script type='text/javascript' src='https://app.tutorbird.com/Widget/v2/Login.ashx'></script>
     </header>
-    <style>
-      header .sb_login {
-        width: 100%;
-        margin-bottom: 40px !important;
-      }
-    </style>
-
-   
-    <footer
-      class="u-align-center u-clearfix u-footer u-grey-80 u-footer"
-      id="sec-1144"
-    >
-      <div class="u-clearfix u-sheet-1 bottom-contianer">
-        <a
-          href="/"
-          class="u-logo u-image-1"
-          data-image-width="256"
-          data-image-height="191"
+    <section class="u-align-center u-clearfix u-section-1" id="carousel_b9b9">
+      <div class="u-clearfix u-sheet u-sheet-1">
+        <h2
+          class="u-custom-font u-font-montserrat u-text u-text-default u-text-1"
         >
-          <img
-            src="images/logosmall.png"
-            class="footer-logo u-logo-image u-logo-image-1"
-          />
-        </a>
+ <img src="images/logo side badge.png" alt="" class="top-image">
+ <h2>Portal SIGN IN</h2>
+ <hr class="protal-hr">
+ <p>Sign in to your account to access your profile, history, and access your tutoring session.</p>
+ <div class="sign-in-btn">
+   <a
+   href="https://app.tutorbird.com/Default.aspx"
+   class="u-border-1 u-border-black u-btn u-button-style u-hover-black u-none u-text-black u-text-hover-white u-btn-1 u-btn-req"
+   target="_blank"
+   >Sign in</a
+   >
+ </div>
+    </section>
 
-        <div class="footer-block-1">
-          <a href="Services.html">Services</a>
-          <a href="About.html">About Us</a>
-          <a href="Contact.html">Contact Us</a>
-          <a href="privcay.html">Privacy Policy</a>
-        </div>
-        <div class="social-btns">
-          <div class="connect-margin">Connect with Us on Social Media</div>
-          <a
-            href="https://www.facebook.com/shiningbrighttutors"
-            class="fa fa-facebook"
-            target="_blank"
-          ></a>
-          <a
-            href="https://twitter.com/S_Bright_Tutors"
-            class="fa fa-twitter"
-            target="_blank"
-          ></a>
-          <a
-            href="https://www.linkedin.com/company/shining-bright-tutors-llc"
-            class="fa fa-linkedin"
-            target="_blank"
-          ></a>
-          <a
-            href="https://www.instagram.com/shining_bright_tutors/"
-            class="fa fa-instagram"
-            target="_blank"
-          ></a>
-        </div>
-        <div class="footer-block-1">
-          <a href="Rates.html">Sign In</a>
-          <p>Drop Us a Line</p>
-          <input
-            type="email"
-            placeholder="Enter Your Email"
-            class="footer-email"
-          />
-        </div>
+    <footer
+    class="u-align-center u-clearfix u-footer u-grey-80 u-footer"
+    id="sec-1144"
+  >
+    <div class="u-clearfix u-sheet-1 bottom-contianer">
+      <a
+        href="/"
+        class="u-logo u-image-1"
+        data-image-width="256"
+        data-image-height="191"
+      >
+        <img
+          src="images/logosmall.png"
+          class="footer-logo u-logo-image u-logo-image-1"
+        />
+      </a>
+
+      <div class="footer-block-1">
+        <a href="Services.html">Services</a>
+        <a href="About.html">About Us</a>
+        <a href="Contact.html">Contact Us</a>
+        <a href="privcay.html">Privacy Policy</a>
       </div>
-    </footer>
+      <div class="social-btns">
+        <div class="connect-margin">Connect with Us on Social Media</div>
+        <a
+          href="https://www.facebook.com/shiningbrighttutors"
+          class="fa fa-facebook"
+          target="_blank"
+        ></a>
+        <a
+          href="https://twitter.com/S_Bright_Tutors"
+          class="fa fa-twitter"
+          target="_blank"
+        ></a>
+        <a
+          href="https://www.linkedin.com/company/shining-bright-tutors-llc"
+          class="fa fa-linkedin"
+          target="_blank"
+        ></a>
+        <a
+          href="https://www.instagram.com/shining_bright_tutors/"
+          class="fa fa-instagram"
+          target="_blank"
+        ></a>
+      </div>
+      <div class="footer-block-1">
+        <a href="Rates.html">Sign In</a>
+        <p>Drop Us a Line</p>
+        <input
+          type="email"
+          placeholder="Enter Your Email"
+          class="footer-email"
+        />
+      </div>
+    </div>
+  </footer>
   </body>
 </html>
+<!-- <script type='text/javascript' src='https://app.tutorbird.com/Widget/v2/Login.ashx'></script>
+<script type='text/javascript' src='https://app.tutorbird.com/Widget/v3/Registration.ashx?id=sch_TVbJz' class='sb_registration'></script> -->
